PARQUET-1976 Update Scala and Maven plugin versions
Use scala-maven-plugin instead of the old maven-scala-plugin.
Update Scala version to 2.12.13